# My-blog

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  tailwind.config.js
assets/html/: Welcome_to_my_blog.html
assets/html_separated/: 404.html  index.html  layout.html
src/: main.rs
