[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
glob = "0.3.1"
lazy_static = "1.4.0"
pulldown-cmark = "0.9.3"
tera = "1.19.1"
env_logger = "0.10.0"
log = "0.4.20"
